// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
\\lim_{x\\to\\infty}f(x)
lim_(+oo) {f(x)}
["Limit", ["Function", ["f", "x"], "x"], "PositiveInfinity"]
`;

exports[` 2`] = `["Limit", ["Function", ["Divide", ["Sin", "x"], "x"], "x"], 0]`;

exports[` 3`] = `
\\lim_{x\\to\\infty}f(x)
lim_(+oo) {f(x)}
["Limit", ["Function", ["f", "x"], "x"], "PositiveInfinity"]
`;

exports[`DEFINITE INTEGRAL Lower and upper bounds 1`] = `
\\int_{0}^{1}\\!\\sin(x)\\, \\mathrm{d}x
int_(0)^(1)(sin(x) dx)
["Integrate", ["Function", ["Sin", "x"], "x"], ["Limits", "x", 0, 1]]
`;

exports[`DEFINITE INTEGRAL Lower and upper bounds with \\limits 1`] = `
\\int_{0}^{1}\\!\\sin(x)\\, \\mathrm{d}x
int_(0)^(1)(sin(x) dx)
["Integrate", ["Function", ["Sin", "x"], "x"], ["Limits", "x", 0, 1]]
`;

exports[`DEFINITE INTEGRAL Lower and upper bounds with no index 1`] = `
\\int_{0}^{1}\\!\\sin(x)
int_(0)^(1)(sin(x) dx)
[
  "Integrate",
  ["Function", ["Sin", "x"], "x"],
  ["Limits", "Nothing", 0, 1]
]
`;

exports[`DEFINITE INTEGRAL Lower bound only (malformed) 1`] = `
\\int_{0}\\!\\sin(x)\\, \\mathrm{d}x
int_(0)(sin(x) dx)
[
  "Integrate",
  ["Function", ["Sin", "x"], "x"],
  ["Limits", "x", 0, "Nothing"]
]
`;

exports[`DEFINITE INTEGRAL Symbolic lower bound (regions) 1`] = `
\\int_{G}\\!\\sin(x)\\, \\mathrm{d}x
int_("CatalanConstant")(sin(x) dx)
[
  "Integrate",
  ["Function", ["Sin", "x"], "x"],
  ["Limits", "x", "CatalanConstant", "Nothing"]
]
`;

exports[`DEFINITE INTEGRAL Upper bound only (malformed) 1`] = `
\\int^{1}\\!\\sin(x)\\, \\mathrm{d}x
int^(1)(sin(x) dx)
[
  "Integrate",
  ["Function", ["Sin", "x"], "x"],
  ["Limits", "x", "Nothing", 1]
]
`;

exports[`EULER DERIVATIVE NOTATION D without subscript - should parse as symbol 1`] = `
D
D
D
`;

exports[`EULER DERIVATIVE NOTATION D^2_x f - second derivative 1`] = `
\\frac{\\mathrm{d}^{2}}{\\mathrm{d}x^{2}}f
D(D((x) |-> f, x), x)
["D", ["D", ["Function", "f", "x"], "x"], "x"]
`;

exports[`EULER DERIVATIVE NOTATION D_t x - different variable 1`] = `
\\frac{\\mathrm{d}}{\\mathrm{d}t}x
D((t) |-> x, t)
["D", ["Function", "x", "t"], "t"]
`;

exports[`EULER DERIVATIVE NOTATION D_x (x^2 + 1) - derivative of expression 1`] = `
\\frac{\\mathrm{d}}{\\mathrm{d}x}x^2+1
D(x^2 + 1, x)
["D", ["Add", ["Square", "x"], 1], "x"]
`;

exports[`EULER DERIVATIVE NOTATION D_x f - first derivative 1`] = `
\\frac{\\mathrm{d}}{\\mathrm{d}x}f
D((x) |-> f, x)
["D", ["Function", "f", "x"], "x"]
`;

exports[`EXOTIC INTEGRALS \\iiint 1`] = `
\\int\\int\\int_{V}\\!f(x, y, z)\\, \\mathrm{d}x \\mathrm{d}y \\mathrm{d}z
int_(V)(f(x, y, z) dx  dy  dz)
[
  "Integrate",
  ["Function", ["f", "x", "y", "z"], "x", "y", "z"],
  ["Limits", "x", "V", "Nothing"],
  ["Limits", "y", "Nothing", "Nothing"],
  ["Limits", "z", "Nothing", "Nothing"]
]
`;

exports[`EXOTIC INTEGRALS \\iint 1`] = `
\\int\\int_{D}\\!f(x, y)\\, \\mathrm{d}x \\mathrm{d}y
int_(D)(f(x, y) dx  dy)
[
  "Integrate",
  ["Function", ["f", "x", "y"], "x", "y"],
  ["Limits", "x", "D", "Nothing"],
  ["Limits", "y", "Nothing", "Nothing"]
]
`;

exports[`EXOTIC INTEGRALS \\intop 1`] = `
(\\mathrm{Baseform}(\\text{unexpected-command}, \\error{\\blacksquare}),0,\\sin(dxx))
(Baseform("unexpected-command", Error(ErrorCode("invalid-base", "\\"\\intop\\""))), 0, sin(d * x * x))
[
  "Tuple",
  [
    "Baseform",
    "unexpected-command",
    ["Error", ["ErrorCode", "invalid-base", ""\\intop""]]
  ],
  0,
  ["Sin", ["Multiply", "d", "x", "x"]]
]
`;

exports[`EXOTIC INTEGRALS \\oint - contour integral 1`] = `
\\ointundefined\\!f(s)
CircularIntegrate(f(s), (s, V, "Nothing"))
["CircularIntegrate", ["f", "s"], ["Triple", "s", "V", "Nothing"]]
`;

exports[`EXOTIC INTEGRALS \\oint - contour integral, no index 1`] = `
\\ointundefined\\!f
CircularIntegrate(f, ("Nothing", C, "Nothing"))
["CircularIntegrate", "f", ["Triple", "Nothing", "C", "Nothing"]]
`;

exports[`EXOTIC INTEGRALS \\smallint 1`] = `
(\\mathrm{Baseform}(\\text{unexpected-command}, \\error{\\blacksquare}),0,\\sin(dxx))
(Baseform("unexpected-command", Error(ErrorCode("invalid-base", "\\"\\smallint\\""))), 0, sin(d * x * x))
[
  "Tuple",
  [
    "Baseform",
    "unexpected-command",
    ["Error", ["ErrorCode", "invalid-base", ""\\smallint""]]
  ],
  0,
  ["Sin", ["Multiply", "d", "x", "x"]]
]
`;

exports[`INDEFINITE INTEGRAL INVALID index in denominator 1`] = `
\\int\\!\\frac{3x}{5dx}=2
int((3x) / (5d * x) dd  dx) === 2
[
  "Equal",
  [
    "Integrate",
    [
      "Function",
      ["Divide", ["Multiply", 3, "x"], ["Multiply", 5, "d", "x"]],
      "d",
      "x"
    ],
    ["Limits", "Nothing", "Nothing", "Nothing"]
  ],
  2
]
`;

exports[`INDEFINITE INTEGRAL Index \\alpha 1`] = `
\\int\\!\\alpha\\, \\mathrm{d}\\alpha+1=2
int(alpha) + 1 === 2
[
  "Equal",
  [
    "Add",
    ["Integrate", "alpha", ["Limits", "alpha", "Nothing", "Nothing"]],
    1
  ],
  2
]
`;

exports[`INDEFINITE INTEGRAL Index after delimiter 1`] = `
\\int\\!x^2+3x\\, \\mathrm{d}x=2
int(x^2 + 3x dx) === 2
[
  "Equal",
  [
    "Integrate",
    ["Function", ["Add", ["Square", "x"], ["Multiply", 3, "x"]], "x"],
    ["Limits", "x", "Nothing", "Nothing"]
  ],
  2
]
`;

exports[`INDEFINITE INTEGRAL Index after implicit trig argument 1`] = `
\\int\\!\\sin(x)\\, \\mathrm{d}x=2
int(sin(x) dx) === 2
[
  "Equal",
  [
    "Integrate",
    ["Function", ["Sin", "x"], "x"],
    ["Limits", "x", "Nothing", "Nothing"]
  ],
  2
]
`;

exports[`INDEFINITE INTEGRAL Index in addition 1`] = `
\\int\\!kx+3x\\, \\mathrm{d}x=2
int(k * x + 3x dk  dx) === 2
[
  "Equal",
  [
    "Integrate",
    [
      "Function",
      ["Add", ["Multiply", "k", "x"], ["Multiply", 3, "x"]],
      "k",
      "x"
    ],
    ["Limits", "x", "Nothing", "Nothing"]
  ],
  2
]
`;

exports[`INDEFINITE INTEGRAL Index in negate 1`] = `
\\int\\!-x\\, \\mathrm{d}x=2
int(-x dx) === 2
[
  "Equal",
  [
    "Integrate",
    ["Function", ["Negate", "x"], "x"],
    ["Limits", "x", "Nothing", "Nothing"]
  ],
  2
]
`;

exports[`INDEFINITE INTEGRAL Index in numerator 1`] = `
\\int\\!\\frac{3x}{5}\\, \\mathrm{d}x=2
int(3/5 * x dx) === 2
[
  "Equal",
  [
    "Integrate",
    ["Function", ["Multiply", ["Rational", 3, 5], "x"], "x"],
    ["Limits", "x", "Nothing", "Nothing"]
  ],
  2
]
`;

exports[`INDEFINITE INTEGRAL Index in numerator with mathrm 1`] = `
\\int\\!\\frac{3x}{5}\\, \\mathrm{d}x=2
int(3/5 * x dx) === 2
[
  "Equal",
  [
    "Integrate",
    ["Function", ["Multiply", ["Rational", 3, 5], "x"], "x"],
    ["Limits", "x", "Nothing", "Nothing"]
  ],
  2
]
`;

exports[`INDEFINITE INTEGRAL Index inside delimiter 1`] = `
\\int\\!x^2+3x\\, \\mathrm{d}x=2
int(x^2 + 3x dx) === 2
[
  "Equal",
  [
    "Integrate",
    ["Function", ["Add", ["Square", "x"], ["Multiply", 3, "x"]], "x"],
    ["Limits", "x", "Nothing", "Nothing"]
  ],
  2
]
`;

exports[`INDEFINITE INTEGRAL Index with \\differentialD 1`] = `
\\int\\!\\sin(x)\\, \\mathrm{d}x+1=2
int(sin(x) dx) + 1 === 2
[
  "Equal",
  [
    "Add",
    [
      "Integrate",
      ["Function", ["Sin", "x"], "x"],
      ["Limits", "x", "Nothing", "Nothing"]
    ],
    1
  ],
  2
]
`;

exports[`INDEFINITE INTEGRAL Index with d 1`] = `
\\int\\!\\sin(x)\\, \\mathrm{d}x+1=2
int(sin(x) dx) + 1 === 2
[
  "Equal",
  [
    "Add",
    [
      "Integrate",
      ["Function", ["Sin", "x"], "x"],
      ["Limits", "x", "Nothing", "Nothing"]
    ],
    1
  ],
  2
]
`;

exports[`INDEFINITE INTEGRAL Index with mathrm 1`] = `
\\int\\!\\sin(x)\\, \\mathrm{d}x+1=2
int(sin(x) dx) + 1 === 2
[
  "Equal",
  [
    "Add",
    [
      "Integrate",
      ["Function", ["Sin", "x"], "x"],
      ["Limits", "x", "Nothing", "Nothing"]
    ],
    1
  ],
  2
]
`;

exports[`INDEFINITE INTEGRAL Index with operatorname 1`] = `
\\int\\!\\sin(x)\\, \\mathrm{d}x+1=2
int(sin(x) dx) + 1 === 2
[
  "Equal",
  [
    "Add",
    [
      "Integrate",
      ["Function", ["Sin", "x"], "x"],
      ["Limits", "x", "Nothing", "Nothing"]
    ],
    1
  ],
  2
]
`;

exports[`INDEFINITE INTEGRAL No index 1`] = `
\\int\\!0+\\sin(x)+1=2
int(0) + sin(x) + 1 === 2
[
  "Equal",
  [
    "Add",
    [
      "Integrate",
      ["Function", 0],
      ["Limits", "Nothing", "Nothing", "Nothing"]
    ],
    ["Sin", "x"],
    1
  ],
  2
]
`;

exports[`INDEFINITE INTEGRAL Non-standard typesetting (\\cdot) 1`] = `
\\int\\!f(t)\\, \\mathrm{d}t
int(f(t) dt)
[
  "Integrate",
  ["Function", ["f", "t"], "t"],
  ["Limits", "t", "Nothing", "Nothing"]
]
`;

exports[`INDEFINITE INTEGRAL Spacing commands 1`] = `
\\int\\!\\sin(x)\\, \\mathrm{d}x+1=2
int(sin(x) dx) + 1 === 2
[
  "Equal",
  [
    "Add",
    [
      "Integrate",
      ["Function", ["Sin", "x"], "x"],
      ["Limits", "x", "Nothing", "Nothing"]
    ],
    1
  ],
  2
]
`;

exports[`LAGRANGE PRIME NOTATION WITH ARGUMENTS \\sin'(x) - known function with prime 1`] = `
\\frac{\\mathrm{d}}{\\mathrm{d}x}\\sin(x)
D(sin(x), x)
["D", ["Sin", "x"], "x"]
`;

exports[`LAGRANGE PRIME NOTATION WITH ARGUMENTS f' without arguments - returns Derivative 1`] = `
f^{\\prime}
Derivative(f)
["Derivative", "f"]
`;

exports[`LAGRANGE PRIME NOTATION WITH ARGUMENTS f'''(x) - triple prime with argument 1`] = `
\\frac{\\mathrm{d}^{3}}{\\mathrm{d}x^{3}}f(x)
D(D(D(f(x), x), x), x)
["D", ["D", ["D", ["f", "x"], "x"], "x"], "x"]
`;

exports[`LAGRANGE PRIME NOTATION WITH ARGUMENTS f''(x) - double prime with argument 1`] = `
\\frac{\\mathrm{d}^{2}}{\\mathrm{d}x^{2}}f(x)
D(D(f(x), x), x)
["D", ["D", ["f", "x"], "x"], "x"]
`;

exports[`LAGRANGE PRIME NOTATION WITH ARGUMENTS f'(x) - single prime with argument 1`] = `
\\frac{\\mathrm{d}}{\\mathrm{d}x}f(x)
D(f(x), x)
["D", ["f", "x"], "x"]
`;

exports[`LAGRANGE PRIME NOTATION WITH ARGUMENTS f'(x, y) - multiple arguments uses first as variable 1`] = `
\\frac{\\mathrm{d}}{\\mathrm{d}x}f(x, y)
D(f(x, y), x)
["D", ["f", "x", "y"], "x"]
`;

exports[`LAGRANGE PRIME NOTATION WITH ARGUMENTS g'(t) - different variable 1`] = `
\\frac{\\mathrm{d}}{\\mathrm{d}t}g(t)
D(g(t), t)
["D", ["g", "t"], "t"]
`;

exports[`MULTIPLE INTEGRALS Double integral 1`] = `
\\int_{1}^{2}\\!\\int\\int_{0}^{1}\\!x^2+y^2\\, \\mathrm{d}x \\mathrm{d}y
int_(1)^(2)(int_(0)^(1)(x^2 + y^2 dx  dy) dx  dy)
[
  "Integrate",
  [
    "Function",
    [
      "Integrate",
      ["Function", ["Add", ["Square", "x"], ["Square", "y"]], "x", "y"],
      ["Limits", "x", 0, 1],
      ["Limits", "y", "Nothing", "Nothing"]
    ],
    "x",
    "y"
  ],
  ["Limits", "Nothing", 1, 2]
]
`;

exports[`MULTIPLE INTEGRALS Double integral with repeated index 1`] = `
\\int_{1}^{2}\\!\\int\\int_{0}^{1}\\!x^2\\, \\mathrm{d}x \\mathrm{d}x
int_(1)^(2)(int_(0)^(1)(x^2 dx) dx)
[
  "Integrate",
  [
    "Function",
    [
      "Integrate",
      ["Function", ["Square", "x"], "x"],
      ["Limits", "x", 0, 1],
      ["Limits", "x", "Nothing", "Nothing"]
    ],
    "x"
  ],
  ["Limits", "Nothing", 1, 2]
]
`;

exports[`MULTIPLE INTEGRALS Triple integral 1`] = `
\\int_{1}^{2}\\!\\int_{0}^{1}\\!\\int\\int\\int_{3}^{4}\\!x^2+y^2+z^2\\, \\mathrm{d}x \\mathrm{d}y \\mathrm{d}z
int_(1)^(2)(int_(0)^(1)(int_(3)^(4)(x^2 + y^2 + z^2 dx  dy  dz) dx  dy  dz) dx  dy  dz)
[
  "Integrate",
  [
    "Function",
    [
      "Integrate",
      [
        "Function",
        [
          "Integrate",
          [
            "Function",
            ["Add", ["Square", "x"], ["Square", "y"], ["Square", "z"]],
            "x",
            "y",
            "z"
          ],
          ["Limits", "x", 3, 4],
          ["Limits", "y", "Nothing", "Nothing"],
          ["Limits", "z", "Nothing", "Nothing"]
        ],
        "x",
        "y",
        "z"
      ],
      ["Limits", "Nothing", 0, 1]
    ],
    "x",
    "y",
    "z"
  ],
  ["Limits", "Nothing", 1, 2]
]
`;

exports[`MULTIPLE INTEGRALS Triple integral with \\limits and spacing 1`] = `
\\int_{1}^{2}\\!\\int_{0}^{1}\\!\\int\\int\\int_{3}^{4}\\!x^2+y^2+z^2\\, \\mathrm{d}x \\mathrm{d}y \\mathrm{d}z
int_(1)^(2)(int_(0)^(1)(int_(3)^(4)(x^2 + y^2 + z^2 dx  dy  dz) dx  dy  dz) dx  dy  dz)
[
  "Integrate",
  [
    "Function",
    [
      "Integrate",
      [
        "Function",
        [
          "Integrate",
          [
            "Function",
            ["Add", ["Square", "x"], ["Square", "y"], ["Square", "z"]],
            "x",
            "y",
            "z"
          ],
          ["Limits", "x", 3, 4],
          ["Limits", "y", "Nothing", "Nothing"],
          ["Limits", "z", "Nothing", "Nothing"]
        ],
        "x",
        "y",
        "z"
      ],
      ["Limits", "Nothing", 0, 1]
    ],
    "x",
    "y",
    "z"
  ],
  ["Limits", "Nothing", 1, 2]
]
`;

exports[`NEWTON DOT NOTATION Dot notation with expression 1`] = `
\\mathtip{\\error{\\blacksquare}}{\\in \\text{expression}\\notin \\text{number}}+\\mathtip{\\error{\\blacksquare}}{\\in \\text{expression}\\notin \\text{number}}
Error(ErrorCode("incompatible-type", "number", "expression")) + Error(ErrorCode("incompatible-type", "number", "expression"))
[
  "Add",
  [
    "Error",
    ["ErrorCode", "incompatible-type", "'number'", "'expression'"]
  ],
  [
    "Error",
    ["ErrorCode", "incompatible-type", "'number'", "'expression'"]
  ]
]
`;

exports[`NEWTON DOT NOTATION First derivative \\dot{x} 1`] = `
\\frac{\\mathrm{d}}{\\mathrm{d}t}x
D((t) |-> x, t)
["D", ["Function", "x", "t"], "t"]
`;

exports[`NEWTON DOT NOTATION Fourth derivative \\ddddot{z} 1`] = `
\\frac{\\mathrm{d}^{4}}{\\mathrm{d}t^{4}}z
D(D(D(D((t) |-> z, t), t), t), t)
["D", ["D", ["D", ["D", ["Function", "z", "t"], "t"], "t"], "t"], "t"]
`;

exports[`NEWTON DOT NOTATION Second derivative \\ddot{x} 1`] = `
\\frac{\\mathrm{d}^{2}}{\\mathrm{d}t^{2}}x
D(D((t) |-> x, t), t)
["D", ["D", ["Function", "x", "t"], "t"], "t"]
`;

exports[`NEWTON DOT NOTATION Third derivative \\dddot{y} 1`] = `
\\frac{\\mathrm{d}^{3}}{\\mathrm{d}t^{3}}y
D(D(D((t) |-> y, t), t), t)
["D", ["D", ["D", ["Function", "y", "t"], "t"], "t"], "t"]
`;

exports[`REAL WORLD INTEGRALS Integral with non standard typesetting 1`] = `
\\mathrm{S_{t}}=\\mathrm{S_0}+\\int_{\\mathrm{t_{i}}}^{\\mathrm{t_{e}}}\\!G-F\\, \\mathrm{d}t
"S_t" === "S_0" + int_("t_i")^("t_e")(-F + "CatalanConstant" dF)
[
  "Equal",
  "S_t",
  [
    "Add",
    "S_0",
    [
      "Integrate",
      ["Function", ["Subtract", "CatalanConstant", "F"], "F"],
      ["Limits", "t", "t_i", "t_e"]
    ]
  ]
]
`;
